# llm-rag-bot

./: .gitignore  Dockerfile  Dockerfile.test  LOCAL_TESTING.md  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  env.example  env.production  env.test  pyproject.toml  test.env
.cursor/rules/: conventions.mdc  development_antipatterns.mdc  workflow.mdc
data/persistent/chroma/: .gitkeep
data/test_uploads/: test_catalog.xlsx  test_catalog_small.xlsx
doc/: about_company.md  iteration6_detailed_plan.md  product_idea.md  tasklist.md  vision.md
docs/: QUICK_MODEL_SETUP.md  QUICK_UPDATE_GUIDE.md  TESTING_ADMIN_PANEL.md  alembic-troubleshooting.md  bot_resource_management_fix.md  deployment_strategy.md  fix_started_at_error.md  model_management_guide.md  notifications_system_guide.md  phone_validation.md  postgresql_database_guide.md  postgresql_password_management.md  production_commands.md  prompts_analysis_and_improvement.md  prompts_management_guide.md  script_testing_report.md  scripts_documentation.md  server_deployment_guide.md  smtp_email_setup_guide.md  timeweb_vps_setup.md  vps_migration_v21_guide.md  vps_update_guide.md
logs_iterations_complete/: CHAT_SUMMARY_ITER1-2.md  DOCKER_TEST_COMPLETE.md  GIT_COMMIT_ITERATION1.md  GIT_COMMIT_ITERATION2.md  GIT_COMMIT_ITERATION3.md  GIT_COMMIT_ITERATION4.md  ITERATION1_COMPLETE.md  ITERATION2_COMPLETE.md  ITERATION3_COMPLETE.md  ITERATION4_COMPLETE.md  ITERATION5_COMPLETE.md  OPTIMIZATION_OPENAI_EMBEDDINGS_COMPLETE.md
scripts/: apply_migrations.py  backup.sh  check_conversations_table.ps1  check_conversations_table.py  check_env_search_settings.sh  check_model.sh  check_postgres_connection.ps1  check_postgres_connection.sh  check_postgres_dev.sh  check_server_code_version.sh  clean_migrations.sh  cleanup_disk_space.sh  create_migration.sh  create_test_admin.py  create_test_excel.py  deploy.sh  fix_catalog_validation.sh  fix_migration_branches.sh  fix_started_at_error.sh  generate_postgres_password.sh  init_admin_users.py  init_classification_settings.py  init_prompts.py  init_test_data.sql  migrate_catalog_v21.sh  prod.sh  prod_logs.sh  prod_restart.sh  prod_restart_env.sh  prod_status.sh  prod_stop.sh  quick_fix_started_at.sh  quick_test.py  quick_update_prompts.py  reset_migrations.sh  run_tests.sh  setup_env_symlink.sh  smoke_tests.sh  start_production.sh  test_admin_panel.py  (+17 more)
src/: __init__.py  main.py
src/application/: __init__.py
src/application/shared/: __init__.py
src/application/telegram/: __init__.py  bot.py  middleware.py
src/application/web/: __init__.py  auth.py  password_auth.py
src/config/: database.py  settings.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  admin_user.py  company_info.py  company_service.py  lead.py  lead_interaction.py  product.py  prompt.py  prompt_updated.py  service_category.py  system_log.py  usage_statistics.py
src/domain/interfaces/: __init__.py  search.py
src/domain/services/: __init__.py  catalog_management.py  company_service_management.py  conversation_service.py  cost_alert_service.py  lead_management.py  prompt_management.py  query_classifier.py  search_orchestrator.py  service_category_management.py  settings_management.py  system_logs_service.py  system_statistics_service.py  usage_statistics_service.py  user_management.py
src/infrastructure/: config.py
src/infrastructure/cache/: __init__.py
src/infrastructure/crm/: __init__.py
src/infrastructure/database/: __init__.py  connection.py  models.py  models_old.py
src/infrastructure/llm/: __init__.py  factory.py
src/infrastructure/logging/: __init__.py  hybrid_logger.py
src/infrastructure/notifications/: __init__.py  email_service.py  telegram_notifier.py
src/infrastructure/search/: __init__.py  catalog_service.py  excel_loader.py  openai_embeddings.py  sentence_transformers_embeddings.py  test_optimization.py
src/infrastructure/services/: classification_settings_service.py  (+1 more)
src/presentation/: __init__.py  template_config.py  template_filters.py
temp/: cache_path_fix.md  check_model_detailed.sh  cleanup_old_model.sh  fix_embedding_model_name.md  huggingface_cache_location_fix.md  lazy_loading_fix.md  model_management_changelog.md  model_management_flow.md  model_ui_improvements.md  progress_and_buttons_improvements.md  snapshot_download_implementation.md  update_prompts.sql
tests/: README.md  conftest.py
tests/e2e/: test_catalog_user_scenarios.py  test_telegram_scenarios.py
tests/fixtures/: factories.py
tests/integration/: test_braces_handling.py  test_catalog_search.py  test_database_operations.py
tests/mocks/: llm_mock.py
tests/unit/: test_catalog_components.py  test_lead_validation.py  test_telegram_notifier.py  test_text_utils.py
(+98 files in other folders)
