[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "llm-rag-bot"
version = "0.1.0"
description = "AI Agent for client consultation with 40K+ product catalog"
authors = ["AI Assistant <ai@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Web Framework
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"

# Telegram Bot
aiogram = "^3.4.1"

# Database
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
alembic = "^1.13.1"

# Vector Search
chromadb = "^0.4.18"

# Data Processing
pandas = "^2.1.4"
openpyxl = "^3.1.2"

# LLM
openai = "^1.6.1"
httpx = "^0.25.2"

# Configuration and validation
pydantic = {extras = ["email"], version = "^2.5.2"}
pydantic-settings = "^2.1.0"

# Utilities
python-dotenv = "^1.0.0"
numpy = "^1.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
